ingress/hello-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: container-a
          image: hoanglinhdigital/nodejs-random-color:service-a
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: container-b
          image: hoanglinhdigital/nodejs-random-color:service-b
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: ClusterIP
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /service-a
            backend:
              service:
                name: service-a
                port:
                  number: 3000
    - http:
        paths:
          - pathType: Prefix
            path: /service-b
            backend:
              service:
                name: service-b
                port:
                  number: 3000
